--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ data/sra/
 data/genome/
 output/align-data/
 output/trim-data/
-output/snp_calling/
+output/snp_calling/HQ_snps_cp.vcf
+output/snp_calling/HQ_snps.vcf
+output/snp_calling/snpview_symb_mpileup.vcf
+output/snp_calling/symb_mpileup.bcf
+output/snp_calling/symb_mpileup.vcf
 jupyter-notebooks/.ipynb_checkpoints
 .ipynb_checkpoints
